# AgSwarm

./: .gitignore  README.md  protocol.md  pyproject.toml
.github/workflows/: desktop-build-release.yml
assets/icons/: app-icon.icns
configs/: nats-dev.conf  nats-lan.conf  skills.example.json
desktop/: .env.example  .gitignore  README.md  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/scripts/: check-release-version.mjs  check-tauri-sidecars.mjs  collect-tauri-artifacts.mjs  generate-updater-manifest.mjs  pi-agent-session-bridge.mjs  prepare-tauri-sidecars.mjs  stress-pi-web-runtime.mjs  (+1 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
desktop/src-tauri/binaries/: package.json  pi-web-agswarm-server.mjs
desktop/src-tauri/binaries/pi-web-client/: index.html  manifest.webmanifest
desktop/src-tauri/binaries/pi-web-client/assets/: CodeViewer-iYSv2-dg.js  TerminalPanel-BpFW6j27.js  index-D4dbiKXF.js  vendor-editor-core-B4Sq6exx.js  vendor-editor-languages-DznYbTkJ.js  vendor-editor-legacy-B4QLsWF8.js  vendor-terminal-DjQ08hXu.js
desktop/src-tauri/binaries/pi-web-package/: LICENSE  README.md  install.sh  package.json  plugin-api.d.ts
desktop/src-tauri/binaries/pi-web-package/docs/: plugins.md
desktop/src-tauri/binaries/pi-web-package/docs/assets/: pi-web-demo.webm
desktop/src-tauri/binaries/pi-web-package/extensions/: pi-web.ts
desktop/src-tauri/binaries/pi-web-package/plugin-api/: unstable.d.ts
desktop/src-tauri/binaries/pi-web-plugins/agswarm-theme/: package.json  pi-web-plugin.js
desktop/src-tauri/binaries/runtime-node/: package-lock.json  package.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
desktop/src-tauri/windows/nsis/: installer-hooks.nsh
docs/: README.md  desktop-client-dev.md  desktop-client-tech-selection.md  handover.md  mac-win-smoke-test.md  mainline-roadmap.md  nats-dev-quickstart.md  oss-component-supplement.md  phase-overview.md  phase2-checklist.md  project-structure.md  skills-config.md
examples/: run_daemon_queue.py  run_nats_case4_latex.py  run_nats_client.py  run_nats_file_resume_demo.py  run_nats_file_upload.py  run_nats_node.py  run_openai_agents.py  run_pydantic_ai.py
scripts/: build_desktop.py  generate_app_icon.py  install_nats_server.ps1  launch_two_desktop_clients.py  phase2_local_baseline.py  regression_mac_win.py  setup_uv_env.ps1  smoke_cli_local.ps1  smoke_mac_client.sh  smoke_two_desktop_clients.py  start_nats.ps1  start_node.ps1
src/: workflow_logging.py
tests/: test_cli_error_summary.py  test_client_messaging.py  test_conversation_store.py  test_desktop_config_sync.py  test_desktop_conversation_state.py  test_desktop_i18n.py  test_error_codes.py  test_lan_discovery.py  test_nats_provider.py  test_node_snapshot_capabilities.py  test_peer_node.py  test_pi_integration.py  test_regression_report.py  test_two_desktop_launcher.py  test_two_desktop_smoke_script.py
(+90 files in other folders)
