[project]
name = "workflow-runtime"
version = "0.1.0"
description = "Thin runtime with pluggable adapters"
requires-python = ">=3.11"
dependencies = [
  "openai-agents>=0.10.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
