[project]
name = "workflow-runtime"
version = "0.1.0"
description = "Thin runtime with pluggable adapters"
requires-python = ">=3.11"
dependencies = [
  "openai-agents>=0.10.2",
]

[project.optional-dependencies]
pydanticai = [
  "pydantic-ai>=1.63.0",
]
nats = [
  "nats-py>=2.0.0",
]
desktop = [
  "PySide6>=6.7.0",
  "qasync>=0.27.1",
]
desktop-build = [
  "pyinstaller>=6.0.0",
  "Pillow>=10.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
