[package]
name = "agswarm-client"
version = "0.2.30"
description = "AgSwarm Client desktop shell"
authors = ["AgSwarm"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
zip = { version = "4", default-features = false, features = ["deflate"] }
